FLOE-1: Tweaks to high-contrast images in authoring interface; fix text size in UIO panel.

--- a/project/media/styles/authoring/edit.css
+++ b/project/media/styles/authoring/edit.css
@@ -1250,3 +1250,27 @@
 .fl-theme-uio-wb #write-toolbar .color-selector.active .text-color,
 .fl-theme-uio-wb #write-toolbar .color-selector.active .bg-color {
   background-image: url(../../images/authoring/toolbar-whiteonblack.png) !important; }
+
+.fl-theme-uio-wb .authoring-head .logo {
+  background-image: url(../../images/authoring/logo-whiteonblack.png); }
+
+.fl-theme-uio-bw .authoring-head .logo {
+  background-image: url(../../images/authoring/logo-blackonwhite.png); }
+
+.fl-theme-uio-yb .authoring-head .logo {
+  background-image: url(../../images/authoring/logo-yellowonblack.png); }
+
+.fl-theme-uio-by .authoring-head .logo {
+  background-image: url(../../images/authoring/logo-blackonyellow.png); }
+
+.fl-theme-uio-wb .step-icons a {
+  background-image: url("../../images/authoring/steps-whiteonblack.png"); }
+
+.fl-theme-uio-bw .step-icons a {
+  background-image: url("../../images/authoring/steps-blackonwhite.png"); }
+
+.fl-theme-uio-yb .step-icons a {
+  background-image: url("../../images/authoring/steps-yellowonblack.png"); }
+
+.fl-theme-uio-by .step-icons a {
+  background-image: url("../../images/authoring/steps-blackonyellow.png"); }
